--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-08 12:46+0100\n"
+"POT-Creation-Date: 2010-03-08 13:16+0100\n"
 "PO-Revision-Date: 2010-03-07 10:35+0100\n"
 "Last-Translator: José Antonio Martín <jantonio.martin@gmail.com>\n"
 "Language-Team: ES <LL@li.org>\n"
@@ -1037,7 +1037,7 @@ msgstr "Avisos"
 msgid "&copy; 2010 Jos&eacute; Antonio Mart&iacute;n Prieto"
 msgstr "&copy; 2020 Jos&eacute; Antonio Mart&iacute;n Prieto"
 
-#: templates/site_base.html:38
+#: templates/site_base.html:38 templates/profiles/profile.html:38
 msgid "About"
 msgstr "Acerca"
 
@@ -1170,3 +1170,166 @@ msgstr "Ocultar anuncio"
 #: templates/default/base.html:57
 msgid "clear"
 msgstr "quitar"
+
+#: templates/profiles/base.html:10
+msgid "Your Profile"
+msgstr "Tu Perfil"
+
+#: templates/profiles/base.html:11 templates/profiles/profiles.html:9
+msgid "All Profiles"
+msgstr "Todos"
+
+#: templates/profiles/profile.html:13
+#, python-format
+msgid "Profile for %(other_user)s"
+msgstr "Perfil de %(other_user)s"
+
+#: templates/profiles/profile.html:31
+#, python-format
+msgid "Profile for <span class=\"nickname\">%(other_user)s</span>"
+msgstr "Perfil de <span class=\"nickname\">%(other_user)s</span>"
+
+#: templates/profiles/profile.html:33
+#, python-format
+msgid "Profile for <span class=\"fn nickname\">%(other_user)s</span>"
+msgstr "Perfil de <span class=\"fn nickname\">%(other_user)s</span>"
+
+#: templates/profiles/profile.html:37 templates/profiles/profiles.html:25
+msgid "Name"
+msgstr "Nombre"
+
+#: templates/profiles/profile.html:39
+msgid "Location"
+msgstr "Ubicación"
+
+#: templates/profiles/profile.html:40
+msgid "Website"
+msgstr "Web"
+
+#: templates/profiles/profile.html:49
+msgid "Followers"
+msgstr "Seguidores"
+
+#: templates/profiles/profile.html:50
+msgid "Following"
+msgstr "Siguiendo"
+
+#: templates/profiles/profile.html:59
+msgid "unfollow"
+msgstr "no seguir"
+
+#: templates/profiles/profile.html:61
+msgid "follow tweets"
+msgstr "seguir tweets"
+
+#: templates/profiles/profile.html:68
+#, python-format
+msgid "You are friends with %(other_user)s."
+msgstr "Eres amigo de %(other_user)s."
+
+#: templates/profiles/profile.html:68
+msgid "Send a message"
+msgstr "Enviar una carta"
+
+#: templates/profiles/profile.html:71
+msgid "remove from friends"
+msgstr "quitar de tus amigos"
+
+#: templates/profiles/profile.html:76
+#, python-format
+msgid "%(other_user)s has requested friendship."
+msgstr "%(other_user)s ha solicitado tu amistad."
+
+#: templates/profiles/profile.html:84
+msgid "accept"
+msgstr "aceptar"
+
+#: templates/profiles/profile.html:89
+msgid "decline"
+msgstr "declinar"
+
+#: templates/profiles/profile.html:95
+msgid "Friendship request sent."
+msgstr "Solicitud de amistad enviada."
+
+#: templates/profiles/profile.html:97
+msgid "Add As Friend"
+msgstr "Añadir como amigo"
+
+#: templates/profiles/profile.html:103
+msgid "invite"
+msgstr "invitar"
+
+#: templates/profiles/profile.html:104
+#, python-format
+msgid "%(other_user)s to be a friend."
+msgstr "a %(other_user)s a que sea tu amigo."
+
+#: templates/profiles/profile.html:114
+msgid "Wiki Articles"
+msgstr "Artículos Wiki"
+
+#: templates/profiles/profile.html:131
+msgid "No wiki articles yet."
+msgstr ""
+
+#: templates/profiles/profile.html:134
+msgid "Bookmarks"
+msgstr ""
+
+#: templates/profiles/profile.html:154
+#, python-format
+msgid ""
+"You haven't added any <a href=\"%(add_bookmark_url)s\">bookmarks</a> yet."
+msgstr ""
+
+#: templates/profiles/profile.html:158
+msgid "Blog Posts"
+msgstr ""
+
+#: templates/profiles/profile.html:165
+msgid "No blog posts yet."
+msgstr ""
+
+#: templates/profiles/profile.html:169
+msgid "Tweets"
+msgstr ""
+
+#: templates/profiles/profile.html:178
+msgid "Photos"
+msgstr ""
+
+#: templates/profiles/profile.html:191
+msgid "No photos uploaded yet."
+msgstr ""
+
+#: templates/profiles/profile.html:197
+#, python-format
+msgid ""
+"<a href=\"%(signup_url)s\">Sign up</a> and <a href=\"%(login_url)s\">log in "
+"</a> to add this person as a friend and see their tweets and blog posts."
+msgstr ""
+"Empieza <a href=\"%(signup_url)s\">registrándote</a> y <a href=\"%(login_url)"
+"s\">accediendo</a>."
+
+#: templates/profiles/profile_edit.html:5
+#: templates/profiles/profile_edit.html:9
+#: templates/profiles/profile_edit_facebox.html:3
+msgid "Edit Profile"
+msgstr "Editar Perfil"
+
+#: templates/profiles/profiles.html:12
+msgid "Profiles"
+msgstr "Perfiles"
+
+#: templates/profiles/profiles.html:23
+msgid "Order by:"
+msgstr "Ordenar por:"
+
+#: templates/profiles/profiles.html:27
+msgid "Date"
+msgstr "Fecha"
+
+#: templates/profiles/profiles.html:37
+msgid "MONTH_DAY_FORMAT"
+msgstr "DAY_MONTH_FORMAT"
