--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -508,7 +508,7 @@ msgstr "Mediterráneo Occidental"
 
 #: machiavelli/templates/machiavelli/base.html:11
 msgid "Map"
-msgstr ""
+msgstr "Mapa"
 
 #: machiavelli/templates/machiavelli/base.html:12
 msgid "All games"
